--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
 <body>
   <div class="container">
     <div class="one">
-      <h1 class="one">Hey
-        <span id="name">Lydia</span>
+      <h1 class="one">嗨,
+        <span id="name">荟之</span>
       </h1>
-      <p class="two" id="greetingText">I really like your name btw!</p>
+      <p class="two" id="greetingText">(我还是想叫你猪猪🐷)</p>
     </div>
     <div class="three">
-      <p>It's your birthday!!! :D</p>
+      <p>宝宝又长大一岁啦😊</p>
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox">Happy birthday to you!! Yeee! Many many happy blah...</p>
-        <p class="fake-btn">Send</p>
+        <p class="hbd-chatbox">生日快乐鸭~~~</p>
+        <p class="fake-btn">发送</p>
       </div>
     </div>
     <div class="five">
-      <p class="idea-1">That's what I was going to do.</p>
-      <p class="idea-2">But then I stopped.</p>
-      <p class="idea-3">I realised, I wanted to do something
-        <strong>special</strong>.</p>
-      <p class="idea-4">Because,</p>
-      <p class="idea-5">You are Special
+      <p class="idea-1">多希望此时此刻能够陪在你身边呀</p>
+      <p class="idea-2">但是我们相隔千里, 却又近在咫尺</p>
+      <p class="idea-3">因为, 你在我的心里吖😘
+        <strong>甜蜜</strong>.</p>
+      <p class="idea-4"></p>
+      <p class="idea-5">接下来是见证奇迹的时刻!
         <span>:)</span>
       </p>
       <p class="idea-6">
@@ -43,11 +43,11 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/lydia2.png" alt="" class="lydia-dp" id="imagePath">
+      <img src="img/HZ2.jpeg" alt="" class="lydia-dp" id="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
-        <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h3 class="wish-hbd">生日快乐!</h3>
+        <h5 id="wishText">崽崽永远17岁!</h5>
       </div>
     </div>
     <div class="seven">
@@ -117,8 +117,8 @@
       </svg>
     </div>
     <div class="nine">
-      <p>Okay, now come back and tell me if you liked it.</p>
-      <p id="replay">Or click, if you want to watch it again.</p>
+      <p>不许笑我这蹩脚的动画</p>
+      <p id="replay">赶紧说爱我!!!</p>
       <p class="last-smile">:)</p>
     </div>
   </div>
