--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <p class="idea-3">因为, 你在我的心里吖😘
         <strong>甜蜜</strong>.</p>
       <p class="idea-4"></p>
-      <p class="idea-5">接下来是见证奇迹的时刻!
+      <p class="idea-5">接下来, 是见证奇迹的时刻!
         <span>:)</span>
       </p>
       <p class="idea-6">
